fix: on firefox, timeline has extra underlines

--- a/pdl-live-react/src/view/timeline/Timeline.css
+++ b/pdl-live-react/src/view/timeline/Timeline.css
@@ -47,6 +47,9 @@
 }
 
 /* Link hover effects */
+.pdl-timeline-kind a {
+  text-decoration: none;
+}
 .pdl-timeline-row:hover {
   .pdl-timeline-kind a {
     text-decoration: underline;
